--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -5,17 +5,17 @@ import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
 ---
 
-<BaseLayout title="About | Jeanine White" description="About Jeanine White Lorem Ipsum">
+<BaseLayout title="About | Rudy Santamaria" description="Rudy Santamaria">
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
 				title="About"
-				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
+				tagline="Découvrez mon parcours et mes compétences"
 			>
 				<img
 					width="1553"
 					height="873"
-					src="/assets/at-work.jpg"
+					src="/public/assets/background.jpg"
 					alt="Jeanine White at work with a colleague"
 				/>
 			</Hero>
@@ -24,35 +24,25 @@ import Hero from '../components/Hero.astro';
 				<h2 class="section-title">Background</h2>
 				<div class="content">
 					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
-					</p>
-					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
-					</p>
-					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
+						  Autodicdate depuis plusieurs années , je ne cesse de m'améliorer dans le monde du web , 
+						  technicien auparavant , j'essaye d'aquérir plus d'expérience à travers des projets
+						  sur differents thèmes.
+						  Ce qui me caractérise le plus, c'est ma capacité à m'adapter à de nouveaux environnements
+						   et à apprendre de nouvelles choses et de nouvelles technologies.
+						  De nature ouverte, j'accorde une grande importance à la communication et au partage de connaissances.	
 					</p>
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Education</h2>
+				<h2 class="section-title">Diplômes</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<p> Bac+2 Technicien Automatismes et Informatique (RNCP) </p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Skills</h2>
 				<div class="content">
-					<p>officia unde omnis</p>
+					<p>Curiosité, Créativité, Autonomie, Organisé, dynamique ,Travail d'équipe</p>
 				</div>
 			</section>
 		</main>
